# kuri_mbzirc_challenge_1

./: .travis.yml  CMakeLists.txt  LICENSE  README.md  ch.1.files  ch.1.includes  kuri_mbzirc_challenge_1.creator.user.18  kuri_mbzirc_challenge_1.files  kuri_mbzirc_challenge_1.includes  kuri_mbzirc_challenge_1.rosinstall  mbzirc_challenge1.rosinstall  rr.files  rr.includes
config/: challenge_1.rviz
install/: setup_env.sh
kuri_mbzirc_challenge_1/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_1/config/: controller.yaml
kuri_mbzirc_challenge_1/launch/: mbzirc_challenge_1.launch  task.launch  task_target_following_gazebo.launch  truck.launch
kuri_mbzirc_challenge_1/scripts/: goto_centre.py  service_controller.py  service_controller_2.py
kuri_mbzirc_challenge_1/src/: client_1.cpp  off_board.cpp  offb_follow_target.cpp  positionEstimationClient.cpp  positionEstimationServer.cpp  server_1.cpp
kuri_mbzirc_challenge_1_docking/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_1_exploration/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_1_exploration/scripts/: explorationServer.py  sendGoalOne.py
kuri_mbzirc_challenge_1_exploration/src/: off_board.cpp  offboardService.cpp
kuri_mbzirc_challenge_1_marker_tracking/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_1_marker_tracking/config/: marker.cao  visptracker-params.yaml
kuri_mbzirc_challenge_1_marker_tracking/launch/: detect_track.launch  detect_track.launch~  detect_track2.launch  detect_track2.launch~  detect_track_gazebo.launch  fieldtest.launch  task.launch
kuri_mbzirc_challenge_1_marker_tracking/msg/: TrackerData.msg
kuri_mbzirc_challenge_1_marker_tracking/scripts/: marker_detection.py  marker_detection.py~  marker_detection_gazebo.py  marker_detection_iDScam.py  target_position.py
kuri_mbzirc_challenge_1_marker_tracking/src/: detectortracker.h  mark_tracker.cpp  mark_tracker.h  mbtracker.cpp  mbtracker.h  posemeanfilter.cpp  posemeanfilter.h  simplemotionfilter.cpp  simplemotionfilter.h  simpleposeextrapolator.cpp  simpleposeextrapolator.h  visptracker.cpp
kuri_mbzirc_challenge_1_marker_tracking/src/detector/: landing_mark_detection.cpp  landing_mark_detection.h
kuri_mbzirc_challenge_1_msgs/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_1_msgs/action/: exploration.action  poseEstimation.action
kuri_mbzirc_challenge_1_msgs/msg/: pidData.msg
kuri_mbzirc_challenge_1_msgs/srv/: Mission.srv  PES.srv  navigation.srv
kuri_mbzirc_challenge_1_system_coordinator/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_1_system_coordinator/config/: state_machine.yaml
kuri_mbzirc_challenge_1_system_coordinator/scripts/: st.py  st4.py  state_machine.py  state_machine.py~  state_machine_2.py  state_machine_3.py
kuri_mbzirc_challenge_1_target_detection/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_1_target_detection/script/: target_detection.py
kuri_mbzirc_challenge_1_target_following/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_1_trajectory_following/: CMakeLists.txt  package.xml
kuri_mbzirc_challenge_1_trajectory_following/include/: PositionEstimation.h
kuri_mbzirc_challenge_1_trajectory_following/include/kuri_mbzirc_challenge_1_trajectory_following/: landingcontroller.h
kuri_mbzirc_challenge_1_trajectory_following/script/: pidPlot.py
kuri_mbzirc_challenge_1_trajectory_following/src/: PositionEstimation.cpp  PositionEstimationServer.cpp  attitudeControlle.cpp  attitudeController.cpp  controller.cpp  landingOnstaticMarker.cpp  landingcontroller.cpp
kuri_mbzirc_challenge_1_trajectory_following/test/: poseEstimationClient.py
launch/: task.launch
scripts/: goto_centre.py
