<?xml version="1.0"?>
<package>
  <name>kuri_mbzirc_challenge_1</name>
  <version>0.1.0</version>
  <description>MBZIRC Challenge 1 related code</description>

  <maintainer email="tarek@tarektaha.com">Tarek Taha</maintainer>
  
  <license>BSD</license>

  <url type="website">https://github.com/kuri-kustar</url>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>kuri_mbzirc_challenge_1_msgs</build_depend>
  <build_depend>kuri_mbzirc_sim</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>eigen_conversions</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>kuri_msgs</build_depend>


  <run_depend>message_runtime</run_depend>
  <run_depend>kuri_mbzirc_sim</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kuri_msgs</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>kuri_mbzirc_challenge_1_msgs</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>message_generation</run_depend>
  <export>
  </export>
</package>
