<?xml version="1.0"?>
<package>
  <name>kuri_mbzirc_challenge_1_docking</name>
  <version>0.0.0</version>
  <description>The kuri_mbzirc_challenge_1_docking package</description>

 
  <maintainer email="reem.ashour@kustar.ac.ae">Reem Ashour</maintainer>

  <url type="website">https://github.com/kuri-kustar</url>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
 <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>


  <export>
  </export>
</package>
