<?xml version="1.0"?>
<package>
  <name>kuri_mbzirc_challenge_1_marker_tracking</name>
  <version>0.0.0</version>
  <description>The kuri_mbzirc_challenge_1_marker_tracking package</description>

  <maintainer email="husameldin.mukhtar@kustar.ac.ae">Husameldin Mukhtar</maintainer>


  <license>BSD</license>

  <url type="website">https://github.com/kuri-kustar</url>
 
  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>opencv</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>visp</build_depend>
  <build_depend>visp_bridge</build_depend>
  <build_depend>message_generation</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>roslib</run_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
<!--  <run_depend>rviz</run_depend> -->
  <run_depend>opencv</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>visp</run_depend>
  <run_depend>message_runtime</run_depend>


  <export>
  </export>
</package>
