<?xml version="1.0"?>
<package>
  <name>kuri_mbzirc_challenge_1_msgs</name>
  <version>0.0.0</version>
  <description>The kuri_mbzirc_challenge_1_msgs package</description>

  <maintainer email="reem.ashour@kustar.ac.ae">Reem Ashour</maintainer>
  <license>BSD</license>

 <url type="website">https://github.com/kuri-kustar</url>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>actionlib</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>kuri_mbzirc_sim</build_depend>
 <build_depend>message_generation</build_depend>
 <build_depend>std_msgs</build_depend>
 <build_depend>geometry_msgs</build_depend>
 <build_depend>kuri_msgs</build_depend>
 <build_depend>sensor_msgs</build_depend>


 <run_depend>message_runtime</run_depend>
  <run_depend>kuri_mbzirc_sim</run_depend>
  <run_depend>actionlib</run_depend>
  <run_depend>actionlib_msgs</run_depend>
 <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>kuri_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>

  <export>



  </export>
</package>
