<?xml version="1.0"?>
<package>
  <name>kuri_mbzirc_challenge_1_trajectory_following</name>
  <version>0.0.0</version>
  <description>The kuri_mbzirc_challenge_1_trajectory_following package</description>

  <maintainer email="reem.ashour@kustar.ac.ae">Reem Ashour</maintainer>


  <license>BSD</license>







 <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>

  <build_depend>geometry_msgs</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>kuri_mbzirc_challenge_1_msgs</build_depend>
  <build_depend>actionlib_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>kuri_mbzirc_challenge_1_msgs</run_depend>
  <run_depend>rviz</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
<run_depend>actionlib_msgs</run_depend>
<run_depend>sensor_msgs</run_depend>

  <run_depend>nav_msgs</run_depend>

  <export>
  </export>
</package>
